index and style code add

--- a/index.html
+++ b/index.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title> S10208460H Website - ID Assignment 2 - Home/ Main Page</title>
-    <link rel="stylesheet" type="text/css"  href="./css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Quicksand'>
-</head>
+    <head>
+        <title> S10208460H Website - ID Assignment 2 - Home/ Main Page</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css"  href="./css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Quicksand'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    </head>
+
+    <body>
+
+        <div class="titleText text-center">
+            <h1>Weather Checker</h1>
+            <p>A website to help you check singapore weather forecasts</p>
+        </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        
+    </body>
 </html>
