js and html update with API working

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--    Important Links                                                                             --> 
+        <!--    API Link: https://data.gov.sg/dataset/weather-forecast                                      --> 
+        <!--    Bootstrap Template Link: https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp    --> 
+        <!--    How to use Public API: https://www.youtube.com/watch?v=InoAIgBZIEA                          --> 
+
         <title> S10208460H Website - ID Assignment 2 - Home/ Main Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +15,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="js/script.js"></script>
+
     </head>
 
     <body>
