Form removal from html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--    Important Links                                                                             --> 
-        <!--    API Link: https://data.gov.sg/dataset/weather-forecast                                      --> 
+        <!--    API Link: https://openweathermap.org/                                                       --> 
         <!--    Bootstrap Template Link: https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp    --> 
         <!--    How to use Public API: https://www.youtube.com/watch?v=InoAIgBZIEA                          --> 
 
@@ -17,33 +17,17 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
     </head>
-
     <body>
-
         <div class="titleText text-center">
             <h1>Weather Checker</h1>
-            <p>A website to help you check singapore weather forecasts</p>
-            
-            <form class="dateInput">
-                <div class="userInput">
-                    <input type="date" class="userInputBox" size="50" required>
-                    <!--<input type="email" class="userInputBox" size="50" required> -->
-                    <div class="submitButton">
-                        <button type="button" class="button btn-danger">Submit</button>
-                    </div>
-                </div>
-            </form>
+            <p>A website to help you check current singapore weather forecast</p>
         </div>
 
-        <div class="resultContainer">
-            <h2><!-- JSON RESULT AREA NAME -->Ang Mo Kio</h2>
+        <div class="resultContainer" id="resultPart">
+            <h2><!-- JSON RESULT AREA NAME -->30 Degrees</h2>
             <h4><!-- JSON RESULT AREA FORECAST -->Partly Cloudy</h4>
             <p><!-- JSON RESULT DATE -->01/02/2020</p>
         </div>
-
-
-
-
         
     </body>
 </html>
