--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
     </head>
+      
     <body>
+        <div class="navBar">
+            <ul> 
+                <!-- Top Navigation Bar -->
+                <li><a href="index.html"> Home </a></li>
+                <li><a href="index.html"> Credits </a></li>
+            </ul>
+        </div>
+
         <div class="titleText text-center">
-            <h1>Weather Checker</h1>
+            <h1>Weather Forecast</h1>
             <p>A website to help you check current singapore weather forecast</p>
         </div>
 
@@ -28,6 +37,5 @@
             <h4><!-- JSON RESULT AREA FORECAST -->Partly Cloudy</h4>
             <p><!-- JSON RESULT DATE -->01/02/2020</p>
         </div>
-        
     </body>
 </html>
