Added JSON functions

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         </div>
 
         <div class="resultContainer" id="resultPart">
-            <h2><!-- JSON RESULT AREA NAME -->30 Degrees</h2>
-            <h4><!-- JSON RESULT AREA FORECAST -->Partly Cloudy</h4>
-            <p><!-- JSON RESULT DATE -->01/02/2020</p>
+            <img class="icon">
+            <h2 class="temp"><!-- JSON RESULT AREA NAME --></h2>
+            <h4 class="forecast"><!-- JSON RESULT AREA FORECAST --></h4>
+            <p id="date"><!-- JSON RESULT DATE --></p>
         </div>
     </body>
 </html>
