credits page addition

--- a/credits.html
+++ b/credits.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--    Important Links                                                                             --> 
-        <!--    API Link: https://openweathermap.org/                                                       --> 
-        <!--    Bootstrap Template Link: https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp    --> 
-        <!--    How to use Public API: https://www.youtube.com/watch?v=InoAIgBZIEA                          --> 
-
-        <title> S10208460H Website - ID Assignment 2 - Home/ Main Page</title>
+        <title> S10208460H Website - ID Assignment 2 - Credit Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css"  href="./css/normalize.css">
@@ -28,15 +23,13 @@
         </div>
 
         <div class="titleText text-center">
-            <h1>Weather Forecast</h1>
-            <p>A website to help you check current singapore weather forecast</p>
+            <h1>Credits</h1>
         </div>
 
         <div class="resultContainer" id="resultPart">
-            <img class="icon">
-            <h2 class="temp"><!-- JSON RESULT AREA NAME --></h2>
-            <h4 class="forecast"><!-- JSON RESULT AREA FORECAST --></h4>
-            <p id="date"><!-- JSON RESULT DATE --></p>
+            
+
+
         </div>
     </body>
 </html>
