Added footer, links, credit page

--- a/index.html
+++ b/index.html
@@ -39,4 +39,11 @@
             <p id="date"><!-- JSON RESULT DATE --></p>
         </div>
     </body>
+
+    <footer>
+        <div class="footer">
+            <p>Chng Boon Chong, 2020</p>
+          </div>
+    </footer>
+
 </html>
