--- a/credits.html
+++ b/credits.html
@@ -22,14 +22,20 @@
             </ul>
         </div>
 
-        <div class="titleText text-center">
+        <div class="creditText text-center">
             <h1>Credits</h1>
         </div>
 
         <div class="resultContainer" id="resultPart">
-            
-
-
+            <h5><a href="https://openweathermap.org/">OpenWeather</a></h5>
+            <h3>Weather forecast data provider</h3>
         </div>
     </body>
+
+    <footer>
+        <div class="footer">
+            <p>Chng Boon Chong, 2020</p>
+          </div>
+    </footer>
+
 </html>
