Fixed missing/ misaligned headers

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="resultContainer" id="resultPart">
-            <img class="icon">
+            <img class="icon"></img>
             <h2 class="temp"><!-- JSON RESULT AREA NAME --></h2>
             <h4 class="forecast"><!-- JSON RESULT AREA FORECAST --></h4>
             <p id="date"><!-- JSON RESULT DATE --></p>
@@ -38,7 +38,7 @@
     <footer>
         <div class="footer">
             <p>Chng Boon Chong, 2020</p>
-          </div>
+        </div>
     </footer>
 
 </html>
