removed empty end tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="resultContainer" id="resultPart">
-            <img class="icon"></img>
+            <img class="icon">
             <h2 class="temp"><!-- JSON RESULT AREA NAME --></h2>
             <h4 class="forecast"><!-- JSON RESULT AREA FORECAST --></h4>
             <p id="date"><!-- JSON RESULT DATE --></p>
