Added messages and pitch

--- a/credits.html
+++ b/credits.html
@@ -22,16 +22,19 @@
             </ul>
         </div>
 
+        <!-- Image Area -->
         <div class="creditText text-center">
             <h1>Credits</h1>
         </div>
 
+        <!-- OpenWeather display -->
         <div class="resultContainer" id="resultPart">
             <h5><a href="https://openweathermap.org/">OpenWeather</a></h5>
             <h3>Weather forecast data provider</h3>
         </div>
     </body>
 
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <p>Chng Boon Chong, 2020</p>
