--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             </ul>
         </div>
 
+        <!-- Image Area -->
         <div class="titleText text-center">
             <h1>Weather Forecast</h1>
             <p>A website to help you check current singapore weather forecast</p>
         </div>
 
+        <!-- Temperature display -->
         <div class="resultContainer" id="resultPart">
             <img class="icon">
             <h2 class="temp"><!-- JSON RESULT AREA NAME --></h2>
@@ -35,6 +37,7 @@
         </div>
     </body>
 
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <p>Chng Boon Chong, 2020</p>
